; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_WpcParseDataEntry.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_WpcParseDataEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i64, i64 }
%struct.TYPE_8__ = type { i64, i32, i32* }

@WPC_DATA_ENTRY_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @WpcParseDataEntry(%struct.TYPE_9__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca [11 x i8], align 1
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  %11 = load i32, i32* @WPC_DATA_ENTRY_SIZE, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %4, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %5, align 8
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %16 = icmp eq %struct.TYPE_9__* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  store i32 1, i32* %8, align 4
  br label %79

18:                                               ; preds = %1
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %20 = call i32 @SeekBuf(%struct.TYPE_9__* %19, i64 0, i32 0)
  %21 = call i32* @NewListFast(i32* null)
  store i32* %21, i32** %7, align 8
  br label %22

22:                                               ; preds = %51, %18
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %25 = load i32, i32* @WPC_DATA_ENTRY_SIZE, align 4
  %26 = call i32 @ReadBuf(%struct.TYPE_9__* %24, i8* %14, i32 %25)
  %27 = load i32, i32* @WPC_DATA_ENTRY_SIZE, align 4
  %28 = icmp ne i32 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  br label %77

30:                                               ; preds = %23
  %31 = getelementptr inbounds [11 x i8], [11 x i8]* %6, i64 0, i64 0
  %32 = call i32 @Zero(i8* %31, i32 11)
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %34 = getelementptr inbounds [11 x i8], [11 x i8]* %6, i64 0, i64 0
  %35 = call i32 @ReadBuf(%struct.TYPE_9__* %33, i8* %34, i32 10)
  %36 = icmp ne i32 %35, 10
  br i1 %36, label %37, label %38

37:                                               ; preds = %30
  br label %77

38:                                               ; preds = %30
  %39 = getelementptr inbounds [11 x i8], [11 x i8]* %6, i64 0, i64 0
  %40 = call i64 @ToInt(i8* %39)
  store i64 %40, i64* %9, align 8
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i32 0, i32 1
  %46 = load i64, i64* %45, align 8
  %47 = sub nsw i64 %43, %46
  %48 = load i64, i64* %9, align 8
  %49 = icmp slt i64 %47, %48
  br i1 %49, label %50, label %51

50:                                               ; preds = %38
  br label %77

51:                                               ; preds = %38
  %52 = call %struct.TYPE_8__* @ZeroMalloc(i32 24)
  store %struct.TYPE_8__* %52, %struct.TYPE_8__** %10, align 8
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %54 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %53, i32 0, i32 2
  %55 = load i64, i64* %54, align 8
  %56 = inttoptr i64 %55 to i32*
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %58 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %57, i32 0, i32 1
  %59 = load i64, i64* %58, align 8
  %60 = getelementptr inbounds i32, i32* %56, i64 %59
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %62 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %61, i32 0, i32 2
  store i32* %60, i32** %62, align 8
  %63 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %64 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %63, i32 0, i32 1
  %65 = load i32, i32* %64, align 8
  %66 = load i32, i32* @WPC_DATA_ENTRY_SIZE, align 4
  %67 = call i32 @Copy(i32 %65, i8* %14, i32 %66)
  %68 = load i64, i64* %9, align 8
  %69 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %70 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %69, i32 0, i32 0
  store i64 %68, i64* %70, align 8
  %71 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %72 = load i64, i64* %9, align 8
  %73 = call i32 @SeekBuf(%struct.TYPE_9__* %71, i64 %72, i32 1)
  %74 = load i32*, i32** %7, align 8
  %75 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %76 = call i32 @Add(i32* %74, %struct.TYPE_8__* %75)
  br label %22

77:                                               ; preds = %50, %37, %29
  %78 = load i32*, i32** %7, align 8
  store i32* %78, i32** %2, align 8
  store i32 1, i32* %8, align 4
  br label %79

79:                                               ; preds = %77, %17
  %80 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %80)
  %81 = load i32*, i32** %2, align 8
  ret i32* %81
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @SeekBuf(%struct.TYPE_9__*, i64, i32) #2

declare dso_local i32* @NewListFast(i32*) #2

declare dso_local i32 @ReadBuf(%struct.TYPE_9__*, i8*, i32) #2

declare dso_local i32 @Zero(i8*, i32) #2

declare dso_local i64 @ToInt(i8*) #2

declare dso_local %struct.TYPE_8__* @ZeroMalloc(i32) #2

declare dso_local i32 @Copy(i32, i8*, i32) #2

declare dso_local i32 @Add(i32*, %struct.TYPE_8__*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
